formatting changes for small screens. need to fix navbar to stay sticky. issue:  html, body {   overflow-x: hidden; /* horizontal overflow hidden */ } is needed but removes sticky attrbute from nav

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
   --accent-color: rgba(49, 49, 49, 0.705);  /* tagline, subheadings in about me, glow, navbar hgihlight */
 }
 
-
 html,
 body {
   overflow-x: hidden; /* horizontal overflow hidden */
@@ -342,6 +341,7 @@ h2 {
 .contact-options {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 60px;
 }
 
@@ -385,6 +385,24 @@ h2 {
 }
 
 @media (max-width: 680px) {
+  .splash {
+    margin: 0 20px;
+  }
+
+  .splash h1 {
+    font-size: 60px;
+    letter-spacing: 8px;
+}
+
+  nav {
+    height: 45px;
+  }
+
+  .navlist {
+    padding: 0 8px;
+    font-size: 15px;
+  }
+
   .about {
     flex-direction: column;
     margin: 0 20px;
@@ -395,5 +413,9 @@ h2 {
     flex: 0 0 100%;
     max-width: 100%; /* override desktop max-width settings*/
     width: 100%;
+  }
+
+  .work {
+    flex-direction: column;
   }
 }
